--- a/[Evaluation] Deep Evaluation.ipynb
+++ b/[Evaluation] Deep Evaluation.ipynb
@@ -65,6 +65,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -217,7 +224,7 @@
     "hasOldProject = checking_df_merged_filtered.apply(lambda row: str(row['project_id']) in row['project_list'],axis=1)\n",
     "checking_df_merged_filtered = checking_df_merged_filtered[~hasOldProject]\n",
     "\n",
-    "print(checking_df_merged_filtered.shape)\n",
+    "print(checking_df_merged_filtered.shape)soundex\n",
     "checking_df_merged_filtered.head()"
    ]
   },
