--- a/Matrix Factorisation collaborative filtering.ipynb
+++ b/Matrix Factorisation collaborative filtering.ipynb
@@ -267,18 +267,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 2min 8s, sys: 30.2 s, total: 2min 38s\n",
-      "Wall time: 2min 31s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "# Convert the dataframe into a matrix using pivot() and set index of df_train for fast search \n",
@@ -297,18 +288,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/users/u5722792744_1/miniconda3/lib/python3.6/site-packages/ipykernel_launcher.py:2: FutureWarning: Method .as_matrix will be removed in a future version. Use .values instead.\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "R = df_train_pivot.as_matrix()\n",
@@ -318,20 +300,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(442253, 1)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "R.shape\n",
     "user_ratings_mean.reshape(-1, 1).shape"
@@ -339,22 +310,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1h 25min 39s, sys: 4min 3s, total: 1h 29min 43s\n",
-      "Wall time: 6min 3s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "from scipy.sparse.linalg import svds\n",
-    "U, sigma, Vt = svds(R_demeaned, k = 75)"
+    "U, sigma, Vt = svds(R_demeaned, k = 300)"
    ]
   },
   {
@@ -381,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,20 +379,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5342]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# New recommend function \n",
     "user_seen_projs = userLog.groupby(\"userCode\").agg({\"project_id\":lambda x:list(x)})\n",
@@ -439,20 +390,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'9027 6298 1744 2629 9007 1104 7113'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "projs_id = preds_df.columns\n",
     "def recommend_project(userId, preds_df=preds_df):\n",
@@ -476,80 +416,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                               userCode            ans_project_id\n",
-      "0  5ea1f668-f96d-9544-38b6-d4c2e39f668c  [6042, 7026, 8091, 6991]\n",
-      "1  8065faa5-cfa4-e0c8-5ec5-22146af8665c                    [8955]\n",
-      "2  b87bb27a-7679-4631-ef12-075fa9ee1b6a                    [6221]\n",
-      "3  f2aad9cb-814b-bb9c-bce9-85b979d81588        [9066, 8412, 7694]\n",
-      "4  7cdef1ff-5dd9-8eb9-0fd2-28244bac1e87                    [6799]\n",
-      "CPU times: user 1h 50min 25s, sys: 6min 47s, total: 1h 57min 13s\n",
-      "Wall time: 7min 29s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
+    "# %%time\n",
     "def predictFromFile(file,submission_name,sep=','):    \n",
     "    users = pd.read_csv(file,sep=sep)\n",
     "    print(users.head())\n",
     "    users['project_id'] = users['userCode'].apply(recommend_project)\n",
     "    users.to_csv(\"./submission/%s.csv\"%submission_name,index=False)\n",
     "    \n",
-    "predictFromFile(\"./clean_data/test_before_021718_7000row.csv\",\"matrix_factorise_v8_k75_ontest7000\")"
+    "# predictFromFile(\"./clean_data/test_before_021718_7000row.csv\",\"matrix_factorise_v9_k300_ontest7000\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                               userCode\n",
-      "0  003366c6-0cd9-48e7-d134-2051d7360c2d\n",
-      "1  003b2f18-60b4-37be-c63d-0caead1afa97\n",
-      "2  003d571e-9de7-6de3-2cb6-2ae190cc7beb\n",
-      "3  00426ede-6813-949b-de2e-6d8b228dff1d\n",
-      "4  0043a9c7-cace-1aa1-3188-4b173bf28991\n",
-      "CPU times: user 1h 48min 43s, sys: 6min 53s, total: 1h 55min 37s\n",
-      "Wall time: 7min 16s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
-    "predictFromFile(\"./data/testing_users.csv\",\"matrix_factorise_v8_k75_submission\")"
+    "predictFromFile(\"./data/testing_users.csv\",\"matrix_factorise_v9_k300_submission\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                               userCode\n",
-      "0  003b2f18-60b4-37be-c63d-0caead1afa97\n",
-      "1  02b44422-25f6-56bb-459c-5944b346badb\n",
-      "2  0419a38a-d883-3bb7-fa1a-8e1a256b89d3\n",
-      "3  044ccce0-3fbe-2887-0d19-f032d8758548\n",
-      "4  046853d9-890d-d0c7-a964-c86f172b0390\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "predictFromFile(\"./data/200_users.csv\",\"matrix_factorise_v8_k75_submission_200users\")"
+    "predictFromFile(\"./data/200_users.csv\",\"matrix_factorise_v9_k300_submission_200users\")"
    ]
   },
   {
